# public/openapi.yaml
@@ -52,27 +52,12 @@ paths:
                         description:
                           type: string
                           example: "Precision cuts tailored to your style."
-                        offers:
-                          type: object
-                          properties:
-                            '@type':
-                              type: string
-                              example: "Offer"
-                            price:
-                              type: string
-                              example: "40"
-                            priceCurrency:
-                              type: string
-                              example: "USD"
-                            availability:
-                              type: string
-                              example: "https://schema.org/InStock"
                         provider:
                           type: object
                           properties:
                             '@type':
                               type: string
-                              example: "LocalBusiness"
+                              example: "Barbershop"
                             name:
                               type: string
                               example: "Richmond Barbershop"
@@ -84,7 +69,7 @@ paths:
                                   example: "PostalAddress"
                                 streetAddress:
                                   type: string
-                                  example: "2820 W Cary St Suite C"
+                                  example: "2820 W Cary St STE C"
                                 addressLocality:
                                   type: string
                                   example: "Richmond"
@@ -147,7 +132,7 @@ paths:
                     properties:
                       '@type':
                         type: string
-                        example: "LocalBusiness"
+                        example: "Barbershop"
                       name:
                         type: string
                         example: "Richmond Barbershop"
